<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.EditFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/item_details"
        app:titleTextColor="@color/primary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="44dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_edit"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/item_image"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:src="@drawable/placeholder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto"
                android:text="@string/item_name"
                android:textColor="@color/grey"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_edit_itemName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:background="@drawable/et_background"
                android:fontFamily="@font/roboto"
                android:hint="@string/hint_item_name"
                android:paddingHorizontal="10dp"
                android:textAlignment="textStart"
                android:textColorHint="@color/et_hint"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/item_price"
                android:textColor="@color/grey"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_edit_itemPrice"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="5dp"
                android:inputType="numberDecimal"
                android:background="@drawable/et_background"
                android:fontFamily="@font/roboto"
                android:hint="@string/hint_item_price"
                android:paddingHorizontal="10dp"
                android:textAlignment="textStart"
                android:textColorHint="@color/et_hint"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/item_manufacturer"
                android:textColor="@color/grey"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_edit_itemBrand"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:background="@drawable/et_background"
                android:fontFamily="@font/roboto"
                android:hint="@string/hint_brand"
                android:paddingHorizontal="10dp"
                android:textAlignment="textStart"
                android:textColorHint="@color/et_hint"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/item_quantity"
                android:textColor="@color/grey"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_edit_itemQuantity"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="5dp"
                android:inputType="number"
                android:background="@drawable/et_background"
                android:fontFamily="@font/roboto"
                android:hint="@string/hint_quantity"
                android:paddingHorizontal="10dp"
                android:textAlignment="textStart"
                android:textColorHint="@color/et_hint"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/btn_edit_cancel"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/btn_blue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_edit_save"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <Button
                    android:id="@+id/btn_edit_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/btn_blue"
                    android:text="@string/edit"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_edit_cancel"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>